--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Serial Manipulator</title>
+    <title> N Link Serial Manipulator</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -194,14 +194,14 @@
 <body class="bg-gray-100 text-gray-800">
     <div class="container">
         <header class="text-center py-10">
-            <h1 class="text-5xl font-extrabold text-blue-700">3D Serial Manipulator</h1>
+            <h1 class="text-5xl font-extrabold text-blue-700">N Link Serial Manipulator</h1>
             <p class="text-xl text-gray-600 mt-3">Interactive Forward Kinematics & Control</p>
         </header>
 
         <div class="flex flex-col md:flex-row gap-6 mb-6">
             <!-- Left Column: Manipulator Simulation -->
             <section class="card md:w-2/3 flex flex-col items-center justify-center relative">
-                <h2 class="text-3xl">1. Manipulator Simulation</h2>
+                <h2 class="text-3xl"> Manipulator Simulation</h2>
                 <canvas id="manipulatorCanvas" class="w-full h-96"></canvas>
                 <div id="alarmMessageBox">
                     WARNING: End Effector Touches Floor!
@@ -213,7 +213,7 @@
 
             <!-- Right Column: Controls -->
             <section class="card md:w-1/3">
-                <h2 class="text-3xl">2. Manipulator Controls</h2>
+                <h2 class="text-3xl"> Manipulator Controls</h2>
                 <!-- Joint Configuration -->
                 <div>
                     <h3 class="text-2xl mb-4">Configuration</h3>
@@ -276,7 +276,7 @@
         </div>
 
         <section class="card">
-            <h2 class="text-3xl">3. Dynamic Calculations (Forward Kinematics)</h2>
+            <h2 class="text-3xl"> Dynamic Calculations (Forward Kinematics)</h2>
             <p class="mt-4 text-lg">
                 The table below shows the calculated 3D coordinates (X, Y, Z) for each joint and the end effector based on the current joint angles.
             </p>
